--- a/.htaccess
+++ b/.htaccess
@@ -125,12 +125,12 @@
 ############################################
 ## uncomment next line to enable light API calls processing
 
-    RewriteRule ^api/([a-z][0-9a-z_]+)/?$ pub/api.php?type=$1 [QSA,L]
+#    RewriteRule ^api/([a-z][0-9a-z_]+)/?$ pub/api.php?type=$1 [QSA,L]
 
 ############################################
 ## rewrite API2 calls to api.php (by now it is REST only)
 
-    RewriteRule ^api/rest pub/api.php?type=rest [QSA,L]
+#    RewriteRule ^api/rest pub/api.php?type=rest [QSA,L]
 
 ############################################
 ## workaround for HTTP authorization
